Adapt start-script